--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -441,8 +441,8 @@
  BLR_liberalization_of_society_desc: "The liberalization of society leads us to a bright future of tolerance and freedom."
  BLR_Delete_KGB2: "Dissolve the KGB"
  BLR_Delete_KGB2_desc: "We will replace the KGB with a new structure - the National Security Service. This organization will be recruited from employees loyal to our Western ideals."
- BLR_Karabah_question2: "§GThe Karabakh Issue§!"
- BLR_Karabah_question2_desc: "We only recognize Azerbaijan's position on the Karabakh issue."
+ BLR_Karabah_question2: "§GLa question du Karabagh§!"
+ BLR_Karabah_question2_desc: "Nous ne reconnaissons que la position de l'Azerbaïdjan sur la question du Karabagh."
  BLR_deal_with_russian_agression: "Russia’s Aggression in Crimea"
  BLR_deal_with_russian_agression_desc: "The annexation of Crimea by Russia is illegal. We condemn this act of occupation and do not recognize Crimea as Russian"
  BLR_Georgia_question: "§GRussian Aggression in Georgia§!"
