--- a/localisation/french/MD_focus_CHE_l_french.yml
+++ b/localisation/french/MD_focus_CHE_l_french.yml
@@ -356,3 +356,5 @@
  CHE_antigay_propaganda_laws_desc: "It's time to legally ban LGBT people in our country"
  CHE_caucas_commies_federation: "Communism in the Caucasus"
  CHE_caucas_commies_federation_desc: "It's time to return communism to the Caucasus, we will be the ones who will return the red banner to these beautiful mountains!"
+ CHE_raduevs: "Special Communism"
+ CHE_raduevs_desc: "It seems that a specific form of communism awaits this country."
