--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -210,7 +210,7 @@
  cuba.49.d: "Finally, after a long debate, representatives of the Cuban democratic parties announced the most important agreement that was signed recently. Putting aside personal interests and putting state interests above, the democratic parties of the Island of freedom will unite into one, common coalition. This is the most important event in the history of the Cuban State"
  cuba.49.a: "We are united and invincible"
  CubaConf.50.t: "The Antillean Confederation"
- CubaConf.50.d: "[FROM.GetName]at a meeting of our governments, extended a formal invitation to join the Antillean Confederation. According to the government, the state will be based on equality, cooperation, and each member of the confederation will have equal rights"
+ CubaConf.50.d: "[FROM.GetName] at a meeting of our governments, extended a formal invitation to join the Antillean Confederation. According to the government, the state will be based on equality, cooperation, and each member of the confederation will have equal rights"
  CubaConf.50.a: "We agree"
  CubaConf.50.b: "No"
  cubaconf.51.t: "The Antillean Confederation"
@@ -602,7 +602,7 @@
  CUB_nationalize_foreign_buisness: "Nationalization of Foreign Businesses"
  CUB_nationalize_foreign_buisness_desc: "Foreign business is a big problem of our economy through which foreign governments influence our economy."
  CUB_anti_lgbt_pos: "Anti-LGBT Position"
- CUB_anti_lgbt_pos_desc: "LGBT - is disease. We need to destroy every LGBT person in our country."
+ CUB_anti_lgbt_pos_desc: "It is important we take a more fundamentalist role on our stance with the LGBT Community of Cuba. If we do not then we are risking some of the identity of our great country."
  CUB_pro_lgbt_pos_desc: "Love will always be love. We must not forbid our people to love "
  CUB_pro_lgbt_pos: "Pro-LGBT Position"
  CUB_soviet_legacy: "Respect the Soviet Legacy"
@@ -1000,9 +1000,9 @@
  CUB_demand_from_us: "Call for the lifting of  Blockade"
  CUB_demand_from_us_desc: "Now that we have many allies in the world, we can demand that the blockade of the American aggressor be lifted."
  CUB_compensation_from_us: "Demand Compensation From USA"
- CUB_compensation_from_us_desc: "For several decades of blockade, our country has suffered huge losses, we have every right to demand compensation from the u.s."
+ CUB_compensation_from_us_desc: "For several decades of the blockade, our country has suffered huge losses, we have every right to demand compensation from the u.s."
  CUB_MERCOSUR: "Ties with MERCOSUR"
- CUB_MERCOSUR_desc: "The Southern Common Market, commonly known by Spanish abbreviation Mercosur, and Portuguese Mercosul, is a South American trade bloc established by the Treaty of Asunción in 1991 and Protocol of Ouro Preto in 1994. Its full members are Argentina, Brazil, Paraguay and Uruguay."
+ CUB_MERCOSUR_desc: "The Southern Common Market, commonly known by the Spanish abbreviation Mercosur, and Portuguese Mercosul, is a South American trade bloc established by the Treaty of Asunción in 1991 and Protocol of Ouro Preto in 1994. Its full members are Argentina, Brazil, Paraguay and Uruguay."
  CUB_operation_miracle: "Start Operation Miracle"
  CUB_operation_miracle_desc: "Operation Milagro  is an international medical program funded by Cuba and Venezuela that provides free treatment to poor people in Third World countries for diseases such as cataracts, glaucoma, strabismus, and others."
  CUB_revive_metallurgy: "Revive Cuban Metallurgy"
@@ -1038,15 +1038,13 @@
  CUB_CUPET: "Expand CUPET"
  CUB_CUPET_desc: " CUPET is Cuba's largest oil company. It is owned and operated by the Cuban national government."
  CUB_idea_blockade: "The Blockade (El Bloqueo) Against Cuba"
- CUB_idea_blockade_desc: "In 1962, the United States imposed an embargo to Cuba which was never lifted. The effects became particularly devistating once the USSR collapsed in the early 199s, leaving Cuba with few trading partners."
+ CUB_idea_blockade_desc: "In 1962, the United States imposed an embargo to Cuba which was never lifted. The effects became particularly devastating once the USSR collapsed in the early 199s, leaving Cuba with few trading partners."
  CUB_idea_Tol_Biz_1: "Tolerate Small Business"
  CUB_idea_Tol_Biz_1_desc: "Small Business will be tolerated"
  CUB_idea_coops: "Agricultural Coops"
  CUB_idea_elam: "Latin American School of Medicine"
  CUB_idea_elam_desc: "The Latin American School of Medicine is an international school that trains doctors from around the world to serve underserved communities."
  CUB_idea_tourist_industry_1: "Cuban Tourism"
- CUB_idea_tourist_industry_2: "Cuban Tourism"
- CUB_idea_tourist_industry_3: "Cuban Tourism"
  CUB_idea_special_period: "The Special Period"
  CUB_idea_special_period_desc: "The Special Period was a period of economic stagnation and crisis for Cuba after the collapse of the USSR."
  CUB_oil_repair_idea1: "Revival of the Cuban Oil Industry"
@@ -1087,3 +1085,15 @@
  leha_where_are_you: "§YWe will launch an operation to capture §RAlexei Navalny§!. The more corrupt Russia is, the better chance we have of taking it over§!"
  CUB_join_csto: "Join CSTO"
  CUB_join_csto_desc: "Some Russian sources have begun to spread information about our joining the CSTO. Well, once they have started to speculate about it, there is no point in keeping it secret. Cuba is part of the CSTO."
+ CUB_idea_tourist_industry: "Cuban Tourism"
+ CUB_idea_tourist_industry_desc: "We should encourage tourism to our great country. Cuba has a rich and vibrant history and it is important to encourage this vital part of our country."
+ cuba.66.t: "Cuba requests the lifting of the blockade"
+ cuba.66.d: "The Cuban government has requested that the embargo be lifted due to improved U.S.-Cuban relations and trade between the two nations."
+ cuba.66.a: "Okay."
+ cuba.66.b: "No."
+ cuba.67.t: "USA has lifted the blockade"
+ cuba.67.d: "Finally, our island can live comfortably."
+ cuba.67.a: "Great!"
+ cuba.68.t: "USA refused"
+ cuba.68.d: "The blockade continues..."
+ cuba.68.a: "Oh..."
