--- a/localisation/french/MD_focus_DEN_l_french.yml
+++ b/localisation/french/MD_focus_DEN_l_french.yml
@@ -828,7 +828,7 @@
  DEN_Fregatte_desc: "With a focus on enhancing surface combat capabilities, the Danish Government invests in the acquisition of new frigates to bolster its naval firepower and presence. Contracts are awarded to the Odense Steel Shipyard for the construction of the Niels Juel-class frigates, equipped with advanced sensors and weapon systems to ensure maritime superiority in contested environments."
  DEN_corvettes: "Corvettes"
  DEN_corvettes_desc: " Complementing its frigate fleet, the Danish Government seeks to procure versatile corvettes optimized for coastal defense and anti-submarine warfare. Collaboration with Kockums AB results in the acquisition of the Knud Viking-class corvettes, equipped with stealth technology and advanced sonar systems for enhanced situational awareness and deterrence capabilities."
- DEN_Submarine_focus: "Subamrine Focus"
+ DEN_Submarine_focus: "Submarine Focus"
  DEN_Submarine_focus_desc: "Acknowledging the strategic importance of undersea warfare, the Danish Government launches a Submarine Focus initiative to modernize and expand its submarine fleet. Collaboration with Saab Kockums leads to the acquisition of the Type 214-class submarines, equipped with state-of-the-art stealth technology and advanced propulsion systems for extended endurance and operational flexibility."
  DEN_attack_submarines: "Attack Submarines"
  DEN_attack_submarines_desc: "With a focus on power projection and sea denial capabilities, the Danish Government invests in the procurement of attack submarines capable of conducting offensive operations against enemy surface vessels and submarines. Contracts are awarded to ThyssenKrupp Marine Systems for the construction of the Havmanden-class attack submarines, equipped with advanced torpedoes and cruise missiles for precision strikes against high-value targets."
@@ -900,7 +900,7 @@
  DEN_Light_forces_focus_desc: "Emphasizing agility and rapid deployment, the Danish Government prioritizes investments in light forces capable of conducting expeditionary operations and specialized missions. Resources are allocated to enhance training, equipment, and mobility for light infantry, reconnaissance, and special operations units, ensuring their effectiveness in a wide range of operational environments."
  DEN_Medium_forces_focus: "Medium Forces Focus"
  DEN_Medium_forces_focus_desc: "Striking a balance between mobility and firepower, the Danish Government directs attention towards medium forces capable of conducting sustained combat operations and providing versatile capabilities. Investments are made in armored and mechanized units equipped with wheeled and tracked vehicles, enabling them to deploy quickly and maneuver effectively in diverse scenarios."
- DEN_Heavy_forces_focus: "Heavvy Forces Focus"
+ DEN_Heavy_forces_focus: "Heavy Forces Focus"
  DEN_Heavy_forces_focus_desc: "Recognizing the importance of armored firepower and resilience on the modern battlefield, the Danish Government reinforces its heavy forces with enhanced capabilities and modernized equipment. Emphasis is placed on upgrading main battle tanks, armored fighting vehicles, and artillery systems to ensure superiority in armored warfare and force projection capabilities."
  DEN_reformed_army: "Reformed Army"
  DEN_reformed_army_desc: "In an effort to adapt to evolving threats and operational requirements, the Danish Government undertakes a comprehensive reform of the army's organizational structure and doctrine. Through restructuring, modernization, and training initiatives, the army is reformed to enhance its agility, interoperability, and readiness for future challenges."
@@ -1034,11 +1034,11 @@
  denmark.29.d: "In 2009 a climate conference was held in Copenhagen, though not reaching any definate conclusion, the entire summit benefited the Danish economy, and made us a blip on the international radar again"
  denmark.29.a: "Someone noticed us!"
  denmark.30.t: "Assault on Kurt Westergaard"
- denmark.30.d: "Late Friday night, a 28 year old Somali man attempted to break into Kurt Westergaard's house to kill him with an axe. Kurt Westergaard, who's now 78 years old, hid in a bathroom in his house, while shielding his granddaugther. Before anything drastic could happen, the police have arrived and shot the attacker in his knee and his hand when he resisted arrest to pacify him."
+ denmark.30.d: "Late Friday night, a 28-year-old Somali man attempted to break into Kurt Westergaard's house to kill him with an axe. Kurt Westergaard, who's now 78 years old, hid in a bathroom in his house, while shielding his granddaughter. Before anything drastic could happen, the police have arrived and shot the attacker in his knee and his hand when he resisted arrest to pacify him."
  denmark.30.a: "What is the world coming to?"
  denmark.31.t: "Foiled attack on Jylland Sposten headquarters"
- denmark.31.d: "Police have discovered and stopped an attack that was supposed to happen on Jylland Sposten headquarters presumabely due to the printing of the Muhammad drawings"
- denmark.31.a: "Efficent police with zero spendings"
+ denmark.31.d: "Police have discovered and stopped an attack that was supposed to happen on Jylland Sposten headquarters presumably due to the printing of the Muhammad drawings"
+ denmark.31.a: "Efficient Police with Zero Spending"
  denmark.32.t: "Reimpose Border Control"
  denmark.32.d: "In an attempt to better counter illegal immigration, Denmark have reimposed border controls. Many nations have questioned the legality of this due to the 1995 Schengen agreement, which abolished internal borders within much of western Europa"
  denmark.32.a: "Damn Danish people, they ruined Denmark"
@@ -1046,7 +1046,7 @@
  denmark.33.d: "In June 2012 Denmark decided to legalize same-sex marriage, which was met with major support from the population. However, a few conservative priests have spoken out against it, claiming it went against \"the fundamentals of the Church's values\""
  denmark.33.a: "Bros before...."
  denmark.34.t: "Teachers Union"
- denmark.34.d: "The Danish Teachers Union have decided to shut down schools, due to a dispute in how the school years were planned, as it had been earlier proven that the teachers only actually taught students for 40% of their work time, the rest were spent preparing"
+ denmark.34.d: "The Danish Teachers Union has decided to shut down schools, due to a dispute in how the school years were planned, as it had been earlier proven that the teachers only actually taught students for 40% of their work time, the rest were spent preparing"
  denmark.34.a: "But I dont want my kids at home?"
  denmark.35.t: "Terror In Denmark"
  denmark.35.d: "In early February, 2015, three seperate shootings have occured in Copenhagen.\n\nThe first shooting occured at the Krudttønden Cafe, which was holding a free speech event at that time, which killed film director Finn Nørgaard.\n\nThe second shooting occured in the Great Synagogue, which killed volunteer guard Dan Uzan.\n\n The third shooting occured near an apartment building, in which Danish police identified the perpertrator and engaged in a shootout with him, killing him.\n\n The entire attack claimed the lives of 3 people and saw 5 officers injured. The perpertrator was Omar Abdel Hamid El-Hussein, a man of Palestinian descent, who's had trouble with the law his whole life and, allegedly, declared his allegiance to the extremist group ISIS before the attacks."
@@ -1372,7 +1372,7 @@
  DEN_Reform_The_NCO_Education: "Alter The NCO Education"
  DEN_Reform_The_NCO_Education_desc: "Non-Commissioned Officers (NCOs). NCOs in the Danish Army are responsible for leading and managing soldiers and are expected to have a broad range of skills and knowledge in areas such as leadership, tactics, and administration."
  DEN_Theoretical_Officer_Education: "Theoretical Officer Education"
- DEN_Regimental_Doctors: "The Defence’s Regimental Doctors"
+ DEN_Regimental_Doctors: "The Defence's Regimental Doctors"
  DEN_Civilian_Education: "The Defence Civilian Education"
  DEN_Dental_Plan: "The Defence Dental Plan"
  DEN_army_dynamic_modifier: "Danish Defence Force"
@@ -1414,13 +1414,8 @@
  DEN_urban_improvement_funds_pool_tt: "Changes §YUrban Development Fund§! by $$[?temp_change|+] Billion (Current: [?DEN_urban_development_fund_value|+3])"
  DEN_intensify_the_flexicurity_idea_trigger_tt: "§Y[DEN.GetNameWithFlag]§! cannot raise §Y$social_budget$§! lower than §Y$social_01$§! while §Y$DEN_intensify_the_flexicurity_idea$§! is in place.\n"
  DEN_euro_decision: "Unlocks §HThe EURO Question§! decisions"
- modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§YBureaucracy Cost§!: [?DEN_bureaucracy_cost_multiplier_modifier_change|%-]\n"
- modify_police_cost_multiplier_modifier_effect_TT: "§YPolice Spending Cost§!: [?DEN_police_cost_multiplier_modifier_change|%-]\n"
- modify_education_cost_multiplier_modifier_effect_TT: "§YEducation Cost§!: [?DEN_education_cost_multiplier_modifier_change|%-]\n"
- modify_health_cost_multiplier_modifier_effect_TT: "§YHealthcare Cost§!: [?DEN_health_cost_multiplier_modifier_change|%-]\n"
- modify_social_cost_multiplier_modifier_effect_TT: "§YSocial Spending Cost§!: [?DEN_social_cost_multiplier_modifier_change|%-]\n"
  DEN_Euro_referendum_TT: "now its up to the Voters."
- DEN_Freetown_Christiana_tt: "§HSjaelland§! Receives §H40 Productivity§! "
+ DEN_Freetown_Christiana_tt: "§HSjaelland§! Receives §H40 Productivity§!"
  DEN_controversal_campain_tt: "a controversal campain could be a great succes but could also fail total, but no nisk, no fun"
  DEN_socialmedia_campain_tt: "a socialmedia campain reach a lot of people, so the risks are low and the chances of succes are really good"
  DEN_Print_campain_tt: "a Printmedia campain coukld be launched, the risk are low, but also the rewards"
@@ -1442,7 +1437,7 @@
  DEN_air_defence_tt: "Modifies §YAir Defence§! for §HForsvaret§! by [?DEN_air_defence_change|+%] (Current: [?DEN_air_defence|Y%])"
  DEN_air_agility_tt: "Modifies §YAir Agility§! for §HForsvaret§! by [?DEN_air_agility_change|+%] (Current: [?DEN_air_agility|Y%])"
  DEN_air_mission_efficiency_tt: "Modifies §YAir Mission Efficiency§! for §HForsvaret§! by [?DEN_air_mission_efficiency_change|+%] (Current: [?DEN_air_mission_efficiency|Y%])"
- DEN_navy_personnel_cost_multiplier_modifier_tt: "Modifies §YNavy Personnel Cost§! for §HForsvaret§! by [?DEN_navy_personnel_cost_multiplier_modifier_change|-%] (Current: [?DEN_navy_personnel_cost_multiplier_modifier|Y%])"
+ DEN_navy_personnel_cost_multiplier_modifier_tt: "Modifies §YNavy Personnel Cost§! for §HForsvaret§! by [?DEN_navy_personnel_cost_multiplier_modifier_change|+%] (Current: [?DEN_navy_personnel_cost_multiplier_modifier|Y%])"
  DEN_positioning_tt: "Modifies §YNavy Positioning§! for §HForsvaret§! by [?DEN_positioning_change|-%] (Current: [?DEN_positioning|Y%])"
  DEN_navy_max_range_factor_tt: "Modifies §YNavy Max Range§! for §HForsvaret§! by [?DEN_navy_max_range_factor_change|+%] (Current: [?DEN_navy_max_range_factor|Y%])"
  DEN_terrain_penalty_reduction_tt: "Modifies §YTerrain Penalty Reduction§! for §HForsvaret§! by [?DEN_terrain_penalty_reduction_change|+%] (Current: [?DEN_terrain_penalty_reduction|Y%])"
@@ -1450,7 +1445,7 @@
  DEN_equipment_cost_multiplier_modifier_tt: "Modifies §YEquipment cost§! for §HForsvaret§! by [?DEN_equipment_cost_multiplier_modifier_change|-%] (Current: [?DEN_equipment_cost_multiplier_modifier|Y%])"
  DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HForsvaret§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modifies §YMilitary Factories Productivity§! for §HForsvaret§! by [?DEN_military_factories_productivity_change|-%] (Current: [?DEN_military_factories_productivity|Y%])"
- DEN_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HForsvaret§! by [?DEN_dockyard_productivity_change|-%] (Current: [?DEN_dockyard_productivity|Y%])"
+ DEN_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HForsvaret§! by [?DEN_dockyard_productivity_change|+%] (Current: [?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "Modifies §YMonthly Population§! for §HKingdom of Denmark§! by [?DEN_monthly_population_change|+%] (Current: [?DEN_monthly_population|Y%])"
  DEN_Culture_drift_defence_factor_tt: "Modifies §YCulture drift Defence§! for §HDanish Culture§! by [?DEN_Culture_drift_defence_factor_change|+%] (Current: [?DEN_Culture_drift_defence_factor|Y%])"
  DEN_Culture_conscription_factor_tt: "Modifies §YConscription§! for §HDanish Culture§! by [?DEN_Culture_conscription_factor_change|+%] (Current: [?DEN_Culture_conscription_factor|Y%])"
