--- a/localisation/french/MD_focus_GER_l_french.yml
+++ b/localisation/french/MD_focus_GER_l_french.yml
@@ -1376,18 +1376,18 @@
  GER_divide_open_desc: "We must devise an East German recovery plan to get it back on its feet, and up to speed with the rest of the nation!"
  GER_divide_close: "Suspend the East German Recovery Plan"
  GER_divide_close_desc: "For now, we must suspend any further progress of the East German recovery plan, and focus on other important issues."
- GER_increase_productivity_in_mecklenburg: "Fund's for Mecklenburg-Vorpommern"
+ GER_increase_productivity_in_mecklenburg: "Funds for Mecklenburg-Vorpommern"
  GER_increase_productivity_in_mecklenburg_desc: "We can help the residents of Mecklenburg-Vorpommern by allocating a certain budget to increase their productivity."
- GER_increase_productivity_in_brandenburg: "Fund's for Brandenburg"
+ GER_increase_productivity_in_brandenburg: "Funds for Brandenburg"
  GER_increase_productivity_in_brandenburg_desc: "We can help the residents of Brandenburg by allocating a certain budget to increase their productivity."
- GER_increase_productivity_in_sachsen: "Fund's for Sachsen"
+ GER_increase_productivity_in_sachsen: "Funds for Sachsen"
  GER_increase_productivity_in_sachsen_desc: "We can help the residents of Sachsen by allocating a certain budget to increase their productivity."
- GER_increase_productivity_in_sachsen_anhalt: "Fund's for Sachsen-Anhalt"
+ GER_increase_productivity_in_sachsen_anhalt: "Funds for Sachsen-Anhalt"
  GER_increase_productivity_in_sachsen_anhalt_desc: "We can help the residents of Sachsen-Anhalt by allocating a certain budget to increase their productivity."
- GER_increase_productivity_in_thuringen: "Fund's for Thuringen"
+ GER_increase_productivity_in_thuringen: "Funds for Thuringen"
  GER_increase_productivity_in_thuringen_desc: "We can help the residents of Thuringen by allocating a certain budget to increase their productivity."
- GER_please_east_germans: "Satisfy East German's"
- GER_please_east_germans_desc: "East German's need to know that their government is there for them, so therefore we will do anything to help them have a more favorable view of us."
+ GER_please_east_germans: "Satisfy East Germans"
+ GER_please_east_germans_desc: "East Germans need to know that their government is there for them, so therefore we will do anything to help them have a more favorable view of us."
  GER_consult_with_an_advisor: "Consult with an Advisor"
  GER_consult_with_an_advisor_desc: "Confused? We'll have an advisor come and give you the run down on what to do."
  germany_divide.69420.t: "Advisors Tip"
