--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -2127,7 +2127,7 @@
  PER_peaceful_protests_tt: "The protests will be §Gpeaceful§!, but they are likely to last a §Rlong time§!.\n\n"
  PER_mousavi_becomes_president_tt: "§YMir-Hossein Mousavi§! becomes the president.\n\n"
  PER_SYR: "Syrian Civil War"
- PER_SYR_desc: "The Syrian Civil War is an ongoing multi-sided armed conflict in Syria fought primarily between the government of President Bashar al-Assad, along with its allies, and various forces opposing the government. The unrest in Syria, part of a wider wave of 2011 Arab Spring protests, grew out of discontent with the Assad government and escalated to an armed conflict after protests calling for his removal were violently suppressed."
+ PER_SYR_desc: "La guerre civile syrienne est un conflit armé multilatéral qui se déroule actuellement en Syrie et qui oppose principalement le gouvernement du président Bachar el-Assad, ainsi que ses alliés, à diverses forces qui s'opposent au gouvernement. Les troubles en Syrie, qui s'inscrivent dans la vague de protestations du Printemps arabe de 2011, sont nés du mécontentement à l'égard du gouvernement Assad et ont dégénéré en conflit armé après que les manifestations appelant à sa destitution ont été violemment réprimées."
  per_intervene_SYR: "Intervene In Syrian Civil War"
  per_intervene_SYR_desc: "Historically Iranian has backed the Syrian Government"
  PER_uranium: "Prospect Uranium"
@@ -5480,8 +5480,6 @@
  PER_ignite_syrian_civilwar: "Will Arm the [FSA.GetFlag] §HFree Syrian Army§! and Ignite a §HSyrian Civil War§!"
  PER_reduce_corruption_by_2: "Will Reduce §HCorruption§! by §H2 Levels§!"
  PER_effect_special_circumstance: "This focus will dispaly effects after the §HRevolution§!"
- Cat_MR_FIGHTER: "Multi-Role Fighter"
- Cat_satellite: "Satellite"
  PER_100_productivity_in_each_state: "Will increase §HProductivity§! by §H100§! in each §HCore State§!"
  PER_USA_will_invest: "[USA.GetFlag] §H[USA.GetName]§! Will start investing in §H[PER.GetName]§!"
  PER_RAJ_will_invest: "[RAJ.GetFlag] §H[RAJ.GetName]§! Will start investing in §H[PER.GetName]§!"
