--- a/localisation/french/MD_focus_PMR_l_french.yml
+++ b/localisation/french/MD_focus_PMR_l_french.yml
@@ -1,12 +1,12 @@
 ﻿l_french:
  PMR_focus: "Transnistria Focus Tree"
- PMR_russians: "Russian Identity"
- PMR_russians2: "Russian Identity"
- PMR_russians3: "Russian Identity"
- PMR_russians4: "Russian Identity"
+ PMR_russians: "L'identité russe"
+ PMR_russians2: "L'identité russe"
+ PMR_russians3: "L'identité russe"
+ PMR_russians4: "L'identité russe"
  PMR_academy_air: "Transnistrian Air Academy"
  PMR_academy_army: "Suvorov Military School"
- PMR_new_army2: "The Russian Army"
+ PMR_new_army2: "L'armée russe"
  PMR_aggresive_foreign_policy_idea: "Aggressive Russian Policy"
  PMR_support_smugglers: "Financial Support To Smugglers"
  PMR_support_smugglers2: "Financial Support To Smugglers"
