--- a/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
+++ b/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
@@ -2023,3 +2023,6 @@
  kla_support: "Supports Us With the KLA"
  albanian_speaking: "Albanian Speaking Nation"
  CAT_utility_vehicle: "Utility Vehicle"
+ Serbia.27.t: "The Balkan Federation"
+ Serbia.27.d: "We have officially become a member of the Balkan Federation"
+ Serbia.27.a: "Good"
