--- a/localisation/french/MD_game_rules_l_french.yml
+++ b/localisation/french/MD_game_rules_l_french.yml
@@ -166,13 +166,13 @@
  RULE_OPTION_NORTHERN_AMBITION_AI_DESC: "The Swedish far-right will see a surge in popularity culminating in an attempt to establish a Swedish Empire in Northern Europe."
  SYR_AI_BEHAVIOR: "@SYR Syrian Arab Republic"
  RULE_OPTION_SYR_HISTORICAL: "Historical AI"
- RULE_OPTION_SYR_HISTORICAL_DESC: "Hafez al-Assad will be succeeded by his oldest son Bashar al-Assad. Bashar will keep Syria as a country aligned to Russia with a balanced focus of diplomacy, military and economy."
+ RULE_OPTION_SYR_HISTORICAL_DESC: "Hafez el-Assad sera remplacé par son fils aîné Bachar el-Assad. Bashar maintiendra la Syrie comme un pays aligné sur la Russie, avec une approche équilibrée de la diplomatie, de l'armée et de l'économie."
  RULE_OPTION_SYR_IRON_LADY: "Iron Lady of Syria"
- RULE_OPTION_SYR_IRON_LADY_DESC: "Hafez al-Assad will be succeeded by his daughter Bushra al-Assad. Bushra will take a more neutral approach between the great powers with a focus on diplomacy and economy."
+ RULE_OPTION_SYR_IRON_LADY_DESC: "Hafez el-Assad sera remplacé par sa fille Bouchra el-Assad. Bouchra adoptera une approche plus neutre entre les grandes puissances, en mettant l'accent sur la diplomatie et l'économie."
  RULE_OPTION_SYR_SYRIAN_SAVAGE: "Syrian Savage"
- RULE_OPTION_SYR_SYRIAN_SAVAGE_DESC: "Hafez al-Assad will be succeeded by youngest son Maher al-Assad. Maher will try to form Greater Syria and carve a new power in the Middle East. He will focus on military and economic expansion."
- RULE_OPTION_SYR_NEW_ASSAD: "New al-Assad"
- RULE_OPTION_SYR_NEW_ASSAD_DESC: "Hafez al-Assad will be succeeded by his brother Rifaat al-Assad after the Damascus Spring. Rifaat will focus on a pro-Saudi policy with focus on diplomacy and economy."
+ RULE_OPTION_SYR_SYRIAN_SAVAGE_DESC: "Hafez el-Assad sera remplacé par son fils cadet, Maher el-Assad. Maher tentera de former la Grande Syrie et de se tailler une nouvelle place au Moyen-Orient. Il se concentrera sur l'expansion militaire et économique."
+ RULE_OPTION_SYR_NEW_ASSAD: "Le nouveau el-Assad"
+ RULE_OPTION_SYR_NEW_ASSAD_DESC: "Hafez el-Assad sera remplacé par son frère Rifaat el-Assad après le Printemps de Damas. Rifaat se concentrera sur une politique pro-saoudienne en mettant l'accent sur la diplomatie et l'économie."
  RULE_OPTION_SYR_DAMASCUS_SPRING: "Damascus Spring"
  RULE_OPTION_SYR_DAMASCUS_SPRING_DESC: "Syria will be overtaken by the Damascus Spring movement and turned into a democracy."
  BHR_AI_BEHAVIOR: "@BHR Bahrain"
@@ -426,14 +426,8 @@
  RULE_NO_DISABLE_NATO_DESC: "NATO will remain a faction."
  RULE_SPREAD_INFLUENCE_AMOUNT_GAIN: "Spread Influence Amount Gain"
  RULE_SPREAD_INFLUENCE_AMOUNT_GAIN_DESC: "Change the influence gained from spreading influence."
- RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3: "3%"
- RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3_DESC: "3% influence gained per spread action. For if you want to ramp up influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_0_5: "0.5%"
  RULE_SPREAD_INFLUENCE_GAIN_0_5_DESC: "0.5% influence gained per spread action. For if you really want to slow down influence gain."
- RULE_SPREAD_INFLUENCE_GAIN_1_5: "1.5%"
- RULE_SPREAD_INFLUENCE_GAIN_1_5_DESC: "1% influence gained per spread action. The default influence gain per spread influence action."
- RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
- RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "1% influence gained per spread action. For if you really want to slow down influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_2: "2%"
  RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% influence gained per sprad action. For if you really want to ramp influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_4: "4%"
@@ -591,3 +585,9 @@
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_TAT_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_tatarstan$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_KHM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_khmao$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_CRM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_crimea$§! focus."
+ RULE_SPREAD_INFLUENCE_GAIN_3: "3%"
+ RULE_SPREAD_INFLUENCE_GAIN_3_DESC: "3% influence gained per spread action. For if you want to ramp up influence gain."
+ RULE_SPREAD_INFLUENCE_GAIN_1_5: "1.5%"
+ RULE_SPREAD_INFLUENCE_GAIN_1_5_DESC: "1% influence gained per spread action. The default influence gain per spread influence action."
+ RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
+ RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "1% influence gained per spread action. For if you really want to slow down influence gain."
