--- a/localisation/french/MD_money_l_french.yml
+++ b/localisation/french/MD_money_l_french.yml
@@ -119,9 +119,9 @@
  GROSS_INCOME: "Revenu brut:"
  GROSS_INCOME_RATE: "§G[?display_income]§!$$"
  POPULATION_TAX_RATE: "Taux taxes pop."
- POPULATION_TAX_RATE_TT: "Le taux d'imposition de la population comprend toutes les taxes imposées au public. Cela peut inclure, sans toutefois s'y limiter, l'impôt sur le revenu, la TVA, la taxe de vente et les taxes foncières.\n\n§YModificateurs des taxes sur la population:§!\n£stability_texticon  Stabilité: [?stability_factor_from_population_tax|%+]"
+ POPULATION_TAX_RATE_TT: "Population Tax Rate includes all of the taxes imposed on the public. This can include but is not limited to income tax, VAT taxes, sales tax, and property taxes.\n\n§YModifiers from Population Taxes:§!\n£stability_texticon  Stability: [?stability_factor_from_population_tax|%+]"
  CORPORATE_TAX_RATE: "Taux taxes sociétés"
- CORPORATE_TAX_RATE_TT: "Le taux d'imposition des sociétés comprend tous les impôts imposés aux sociétés. La valeur comprend l'impôt sur le revenu des sociétés, les impôts des employeurs, etc.\n\n§YModificateurs des taxes sur les sociétés:§!\n£consumer_goods_texticon  Coût fiscal: [?consumer_goods_from_corporate_tax|%Y]\n£receiving_investment_cost_modifier_texticon §YReçu des investissements étrangers§! Modificateur de coût: [?receiving_investment_cost_form_corporate_tax|%-]"
+ CORPORATE_TAX_RATE_TT: "Corporate Tax Rate includes all of the taxes imposed on corporations. The value consists of corporate income taxes, employer taxes, and more.\n\n§YModifiers from Corporate Taxes:§!\n£consumer_goods_texticon  Tax Cost: [?consumer_goods_from_corporate_tax|%Y]\n£receiving_investment_cost_modifier_texticon §YReceiving Foreign Investment§! Cost Modifier: [?receiving_investment_cost_form_corporate_tax|%-]\nMonthly Productivity Growth: [?productivity_growth_modifier_from_corporate_tax|+3]\n"
  maritime_subsidies_event_tt: "[?additional_expense_maritime_industry|3R]$$ de $MAR_industry_subsidies$ (Jours restants: [?MAR_industry_subsidies:days_left|Y0])\n"
  min_export_text_tt: "[?ROOT.modifier@min_export|Y%0]"
  min_export_text_tooltip_tt: "£traded_goods_texticon Ressources pour le marché: [?ROOT.modifier@min_export|Y%0]\n\nCette valeur représente le nombre de ressources mises sur le marché."
