--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -157,11 +157,6 @@
  DESIGNER_COMBATWIDTH: "£combat_width_texticon Largeur de combat: "
  DESIGNER_MANPOWER: "£manpower_texticon Main-d'œuvre: "
  DESIGNER_TRAINING_TIME: "£training_speed_texticon Temps d'entraînement: "
- Cat_GENES_research: "£research_bonus_texticon Vitesse de recherche en génétique"
- Cat_AI_research: "£research_bonus_texticon Technologie d'intelligence artificielle"
- Cat_NFIBERS_research: "£research_bonus_texticon Technologie des nanofibres"
- Cat_3D_research: "£research_bonus_texticon Technologie d'impression 3D"
- Cat_satellite_research: "£research_bonus_texticon Technologie satellite"
  EFFECT_ADD_NATIONAL_UNITY: "£national_unity_texticon Gain d'unité nationale de base: $VAL|+=%$."
  EFFECT_SET_NATIONAL_UNITY: "£national_unity_texticon Définir l'unité nationale de base: $VAL|%$."
  EFFECT_ADD_STABILITY: "£stability_texticon Gain de stabilité de base: $VAL|+=%$."
@@ -2149,5 +2144,16 @@
  resource_sector_workers_modifier: "Travailleurs nécessaires à l'extraction des ressources"
  gdp_from_resource_sector_modifier: "Génération du PIB par le secteur des ressources"
  agriculture_workers_modifier: "Travailleurs nécessaires à l'agriculture"
- international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Income§! Modifier"
- international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier"
+ international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon Modificateur de §YRevenu du Marché International§!"
+ international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon Modificateur de §YAchat sur le Marché International§!"
+ CAT_support_weapons: "£research_bonus_texticon Armes de soutien"
+ CAT_inf_wep: "£research_bonus_texticon Armes d'infanterie"
+ CAT_naval_eqp: "£research_bonus_texticon Équipement naval"
+ CAT_bm: "£research_bonus_texticon Missiles balistiques"
+ CAT_3d_research: "Technologie d'impression 3D"
+ CAT_internet_tech_research: "Technologie Internet"
+ CAT_computing_tech_research: "Technologie informatique"
+ CAT_genes: "£research_bonus_texticon Vitesse de recherche en génétique"
+ CAT_ai_research: "£research_bonus_texticon Technologie d'intelligence artificielle"
+ CAT_3d: "£research_bonus_texticon Technologie d'impression 3D"
+ CAT_satellite: "£research_bonus_texticon Technologie satellite"
