--- a/localisation/french/MD_opinion_modifiers_l_french.yml
+++ b/localisation/french/MD_opinion_modifiers_l_french.yml
@@ -452,3 +452,6 @@
  SIN_anti_f1_sentiment: "Barred the Grand Prix"
  falkland_conflict_argentina: "Falkland Conflict"
  recent_actions_very_positive: "Very Positive Actions Recently"
+ mutual_investment_treaty_opinion: "Signed a Mutual Investment Treaty"
+ mutual_investment_treaty_trade_opinion: "Signed a Mutual Investment Treaty"
+ broke_mutual_investment_treaty: "Broke Mutual Investment Treaty"
