--- a/localisation/french/replace/replaced_from_vanilla_air_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_air_l_french.yml
@@ -414,5 +414,5 @@
  QUICK_DEPLOY_SELECTION_WINDOW_DESC: "§GCocher§! pour ajouter des types d'avions au déploiement rapide"
  QUICK_DEPLOY_SELECTION_WINDOW_OPEN_DESC: "Déploiement rapide\n\nAjoute des raccourcis pour déployer des §Hescadrilles§! d'un type spécifique."
  NOT_ENOUGH_PLANES_FOR_MISION: "§RCette escadrille doit compter au moins $NUM$ appareils pour mener à bien cette mission.§!"
- SETUP_AIR_WING_MOVE_INFO: "§GClick§! to transfer up to §H50§! planes of this type."
+ SETUP_AIR_WING_MOVE_INFO: "§GCliquer§! pour transférer jusqu'à §H50§!appareils de ce type."
  OPEN_DESIGNER_VIEW_NOT_FOREIGN: "§GCliquer§! pour afficher cette variante dans le concepteur de matériel. Les variantes étrangères ne peuvent être éditées."
