--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -2141,3 +2141,4 @@
  saudis_refused_to_expand_trade_relations: "Saudis Refused to Expand Trade Relations"
  IRQ_anti_iran_stance: "Is NOT a [PER.GetFlag] §HPro-Iranian§! group"
  IRQ_mek_revolted_already: "MEK Revolted Already"
+ IRQ_war_with_shias: "War with Shias"
