--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ v1.10.1
   - Reduced SOV tank stockpiles
   - Increased the construction time for a number of building types
   - Increased the PP cost for Proposed Trade Agreements
+  - Made Chechen slightly stronger. They now start with insurgency doctrines.
 
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
@@ -53,14 +54,24 @@ v1.10.1
   - Fixed a bug with quadcopter drones. No more internal bays for you!
   - Fixed GFX bug with land doctrines
   - Fixed a bug with Kosovo being unable to appease Serbs
+  - Added missing General Dynamic company for US APCs
+  - Added missing XP to USN/USMC planes
+  - Fixed an error with US squadrons for players without BBA
+  - Fixed a graphic error linked to ships blinking/rotating
+  
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
   - Added HLS, SMA, MNC, ADO, and LIC to the possible European Member States
   - Added a "Propose Mutual Investment Treaty" mechanic which should allow you to request AI nations to invest in you as well as gain a buff for investing in other nations
+  - Improved French OOB, added 50 brigade names to their library
+  - Refined French and Russian starting stockpile
 
  Graphics:
   - Added unique graphics to the "Pillar of Counter Terrorism" and "French Foreign Legion" idea icons
   - Added new Franch plane model for non-BBA players which already implement into BBA in 1.10.0
+  - New models for Germany
+  - New models for France
+  - Added some missing models/gfx to the NSB library
 
  Game Rules:
   - Added 1% and 1.5% for Influence Spread Gain to Game Rules
